Solving issues with spacing on the social media icons

--- a/css/main.css
+++ b/css/main.css
@@ -117,16 +117,18 @@ p {
 	margin: 0 auto;
 	padding: 0rem 1.3rem;
 	text-align: center;
+	margin-bottom: 4em;
+	background-color: #e2f4ae;
 }
 
 .contact a{
-	padding: 0.65em;
-	margin: ;
+	margin: 0 auto;
 }
 
 .contact img {
-	width: 25%;
-	float: left;
+	display: inline-block;
+	width: 33%;
+	margin: 0 auto;
 	padding: 0.65em;
 }
 
